@@ -255,9 +255,13 @@ DOC(plgcompression, "Get the current compression setting.")
 void
 plgcompression(PLINT *OUTPUT);
 
+//temporary
+#if 0
 DOC(plgdev, "Get the current device (keyword) name.")
 void
 plgdev(char *OUTPUT);
+//temporary
+#endif
 
 DOC(plgdidev, "Retrieve current window into device space.")
 void
@@ -275,9 +279,13 @@ DOC(plgfam, "Get family file parameters.")
 void
 plgfam(PLINT *OUTPUT, PLINT *OUTPUT, PLINT *OUTPUT);
 
+//temporary
+#if 0
 DOC(plgfnam, "Get the (current) output file name.")
 void
 plgfnam(char *OUTPUT);
+//temporary
+#endif
 
 DOC(plglevel, "Get the (current) run level.")
 void
@@ -300,9 +308,12 @@ DOC(plgstrm, "Get current stream number.")
 void
 plgstrm(PLINT *OUTPUT);
 
+//temporary
+#if 0
 DOC(plgver, "Get current library version number.")
 void
 plgver(char *OUTPUT);
+#endif
 
 DOC(plgvpd, "Get viewport boundaries in normalized device coordinates.")
 void
