@@ -3,15 +3,18 @@ C, Tcl, and Python examples.
 
 Here is the cookbook for compiling and running these examples.
 
-(1) Install a jdk (Java Development Kit).  I used the Blackdown jdk-1.2.2
-for Linux, but for that platform there is also an IBM jdk if you prefer.
+(1) Install a Java SDK (Software Development Kit).  I use
+IBMJava2-SDK-14.tgz which is freely downloadable from IBM.  (See
+http://www-106.ibm.com/developerworks/java/jdk/linux/tested.html for product
+description.)
 
 (2) Set environment variables (under tcsh.  For bash use the export
 variable=value syntax.)
-#Your location for the java jdk will vary.
-setenv JAVA_HOME /home/software/java/jdk1.2.2/
+# Your location for the java SDK will vary depending on where you unpack the
+# tarball of the SDK.
+setenv JAVA_HOME /home/software/java/IBMJava2-14/
 setenv PATH $PATH":$JAVA_HOME/bin"
-#Your locations will differ depending on your prefix.
+#Your locations will differ depending on your PLPlot configure --prefix.
 setenv CLASSPATH /usr/local/plplot/lib/java
 setenv LD_LIBRARY_PATH /usr/local/plplot/lib
 
